Use valueOf for creating all of the classes which wrap primitives. This lets us take advantage of immutable object caching.
git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/trunk@9242 67b53d14-2c14-4ace-a08f-0dab2b34000c