@@ -75,7 +75,7 @@ class JJTParserState {
 
 
   void openNodeScope(Node n) {
-    marks.push(new Integer(mk));
+    marks.push(Integer.valueOf(mk));
     mk = sp;
     n.jjtOpen();
   }
