@@ -2325,14 +2325,14 @@ void VariableDeclaratorId() #VariableDeclaratorId :
     if(ch == 'f' || ch == 'F')
     {
         literal = literal.substring(0,literal.length()-1);
-        jjtn000.value = new Primitive( new Float( literal ).floatValue() );
+        jjtn000.value = new Primitive( Float.valueOf( literal ).floatValue() );
     }
     else
     {
         if(ch == 'd' || ch == 'D')
             literal = literal.substring(0,literal.length()-1);
 
-        jjtn000.value = new Primitive( new Double( literal ).doubleValue() );
+        jjtn000.value = new Primitive( Double.valueOf( literal ).doubleValue() );
     }
         break;
       case CHARACTER_LITERAL:
