@@ -132,14 +132,14 @@ public final class Primitive implements ParserConstants, java.io.Serializable
         this.value = value;
     }
 
-    public Primitive(boolean value) { this(new Boolean(value)); }
-    public Primitive(byte value) { this(new Byte(value)); }
-    public Primitive(short value) { this(new Short(value)); }
-    public Primitive(char value) { this(new Character(value)); }
-    public Primitive(int value) { this(new Integer(value)); }
-    public Primitive(long value) { this(new Long(value)); }
-    public Primitive(float value) { this(new Float(value)); }
-    public Primitive(double value) { this(new Double(value)); }
+    public Primitive(boolean value) { this(Boolean.valueOf(value)); }
+    public Primitive(byte value) { this(Byte.valueOf(value)); }
+    public Primitive(short value) { this(Short.valueOf(value)); }
+    public Primitive(char value) { this(Character.valueOf(value)); }
+    public Primitive(int value) { this(Integer.valueOf(value)); }
+    public Primitive(long value) { this(Long.valueOf(value)); }
+    public Primitive(float value) { this(Float.valueOf(value)); }
+    public Primitive(double value) { this(Double.valueOf(value)); }
 
 	/**
     	Return the primitive value stored in its java.lang wrapper class
@@ -268,18 +268,18 @@ public final class Primitive implements ParserConstants, java.io.Serializable
         switch(kind)
         {
             case EQ:
-                return new Boolean(lhs == rhs);
+                return Boolean.valueOf(lhs == rhs);
 
             case NE:
-                return new Boolean(lhs != rhs);
+                return Boolean.valueOf(lhs != rhs);
 
             case BOOL_OR:
             case BOOL_ORX:
-                return new Boolean( lhs || rhs );
+                return Boolean.valueOf( lhs || rhs );
 
             case BOOL_AND:
             case BOOL_ANDX:
-                return new Boolean( lhs && rhs );
+                return Boolean.valueOf( lhs && rhs );
 
             default:
                 throw new InterpreterError("unimplemented binary operator");
@@ -297,65 +297,65 @@ public final class Primitive implements ParserConstants, java.io.Serializable
             // boolean
             case LT:
             case LTX:
-                return new Boolean(lhs < rhs);
+                return Boolean.valueOf(lhs < rhs);
 
             case GT:
             case GTX:
-                return new Boolean(lhs > rhs);
+                return Boolean.valueOf(lhs > rhs);
 
             case EQ:
-                return new Boolean(lhs == rhs);
+                return Boolean.valueOf(lhs == rhs);
 
             case LE:
             case LEX:
-                return new Boolean(lhs <= rhs);
+                return Boolean.valueOf(lhs <= rhs);
 
             case GE:
             case GEX:
-                return new Boolean(lhs >= rhs);
+                return Boolean.valueOf(lhs >= rhs);
 
             case NE:
-                return new Boolean(lhs != rhs);
+                return Boolean.valueOf(lhs != rhs);
 
             // arithmetic
             case PLUS:
-                return new Long(lhs + rhs);
+                return Long.valueOf(lhs + rhs);
 
             case MINUS:
-                return new Long(lhs - rhs);
+                return Long.valueOf(lhs - rhs);
 
             case STAR:
-                return new Long(lhs * rhs);
+                return Long.valueOf(lhs * rhs);
 
             case SLASH:
-                return new Long(lhs / rhs);
+                return Long.valueOf(lhs / rhs);
 
             case MOD:
-                return new Long(lhs % rhs);
+                return Long.valueOf(lhs % rhs);
 
             // bitwise
             case LSHIFT:
             case LSHIFTX:
-                return new Long(lhs << rhs);
+                return Long.valueOf(lhs << rhs);
 
             case RSIGNEDSHIFT:
             case RSIGNEDSHIFTX:
-                return new Long(lhs >> rhs);
+                return Long.valueOf(lhs >> rhs);
 
             case RUNSIGNEDSHIFT:
             case RUNSIGNEDSHIFTX:
-                return new Long(lhs >>> rhs);
+                return Long.valueOf(lhs >>> rhs);
 
             case BIT_AND:
             case BIT_ANDX:
-                return new Long(lhs & rhs);
+                return Long.valueOf(lhs & rhs);
 
             case BIT_OR:
             case BIT_ORX:
-                return new Long(lhs | rhs);
+                return Long.valueOf(lhs | rhs);
 
             case XOR:
-                return new Long(lhs ^ rhs);
+                return Long.valueOf(lhs ^ rhs);
 
             default:
                 throw new InterpreterError(
@@ -374,65 +374,65 @@ public final class Primitive implements ParserConstants, java.io.Serializable
             // boolean
             case LT:
             case LTX:
-                return new Boolean(lhs < rhs);
+                return Boolean.valueOf(lhs < rhs);
 
             case GT:
             case GTX:
-                return new Boolean(lhs > rhs);
+                return Boolean.valueOf(lhs > rhs);
 
             case EQ:
-                return new Boolean(lhs == rhs);
+                return Boolean.valueOf(lhs == rhs);
 
             case LE:
             case LEX:
-                return new Boolean(lhs <= rhs);
+                return Boolean.valueOf(lhs <= rhs);
 
             case GE:
             case GEX:
-                return new Boolean(lhs >= rhs);
+                return Boolean.valueOf(lhs >= rhs);
 
             case NE:
-                return new Boolean(lhs != rhs);
+                return Boolean.valueOf(lhs != rhs);
 
             // arithmetic
             case PLUS:
-                return new Integer(lhs + rhs);
+                return Integer.valueOf(lhs + rhs);
 
             case MINUS:
-                return new Integer(lhs - rhs);
+                return Integer.valueOf(lhs - rhs);
 
             case STAR:
-                return new Integer(lhs * rhs);
+                return Integer.valueOf(lhs * rhs);
 
             case SLASH:
-                return new Integer(lhs / rhs);
+                return Integer.valueOf(lhs / rhs);
 
             case MOD:
-                return new Integer(lhs % rhs);
+                return Integer.valueOf(lhs % rhs);
 
             // bitwise
             case LSHIFT:
             case LSHIFTX:
-                return new Integer(lhs << rhs);
+                return Integer.valueOf(lhs << rhs);
 
             case RSIGNEDSHIFT:
             case RSIGNEDSHIFTX:
-                return new Integer(lhs >> rhs);
+                return Integer.valueOf(lhs >> rhs);
 
             case RUNSIGNEDSHIFT:
             case RUNSIGNEDSHIFTX:
-                return new Integer(lhs >>> rhs);
+                return Integer.valueOf(lhs >>> rhs);
 
             case BIT_AND:
             case BIT_ANDX:
-                return new Integer(lhs & rhs);
+                return Integer.valueOf(lhs & rhs);
 
             case BIT_OR:
             case BIT_ORX:
-                return new Integer(lhs | rhs);
+                return Integer.valueOf(lhs | rhs);
 
             case XOR:
-                return new Integer(lhs ^ rhs);
+                return Integer.valueOf(lhs ^ rhs);
 
             default:
                 throw new InterpreterError(
@@ -448,31 +448,31 @@ public final class Primitive implements ParserConstants, java.io.Serializable
             // boolean
             case LT:
             case LTX:
-                return new Boolean(lhs.compareTo(rhs) < 0);
+                return Boolean.valueOf(lhs.compareTo(rhs) < 0);
 
             case GT:
             case GTX:
-                return new Boolean(lhs.compareTo(rhs) > 0);
+                return Boolean.valueOf(lhs.compareTo(rhs) > 0);
 
             case EQ:
-                return new Boolean(lhs.equals(rhs));
+                return Boolean.valueOf(lhs.equals(rhs));
 
             case LE:
             case LEX:
-                return new Boolean(lhs.compareTo(rhs) <= 0);
+                return Boolean.valueOf(lhs.compareTo(rhs) <= 0);
 
             case GE:
             case GEX:
-                return new Boolean(lhs.compareTo(rhs) >= 0);
+                return Boolean.valueOf(lhs.compareTo(rhs) >= 0);
 
             case NE:
-                return new Boolean(!lhs.equals(rhs));
+                return Boolean.valueOf(!lhs.equals(rhs));
 
             case PLUS:
                 return lhs + rhs;
                 
             case MATCH:
-                return new Boolean(Pattern.matches(rhs, lhs));
+                return Boolean.valueOf(Pattern.matches(rhs, lhs));
                 
             default:
                 throw new InterpreterError(
@@ -492,41 +492,41 @@ public final class Primitive implements ParserConstants, java.io.Serializable
             // boolean
             case LT:
             case LTX:
-                return new Boolean(lhs < rhs);
+                return Boolean.valueOf(lhs < rhs);
 
             case GT:
             case GTX:
-                return new Boolean(lhs > rhs);
+                return Boolean.valueOf(lhs > rhs);
 
             case EQ:
-                return new Boolean(lhs == rhs);
+                return Boolean.valueOf(lhs == rhs);
 
             case LE:
             case LEX:
-                return new Boolean(lhs <= rhs);
+                return Boolean.valueOf(lhs <= rhs);
 
             case GE:
             case GEX:
-                return new Boolean(lhs >= rhs);
+                return Boolean.valueOf(lhs >= rhs);
 
             case NE:
-                return new Boolean(lhs != rhs);
+                return Boolean.valueOf(lhs != rhs);
 
             // arithmetic
             case PLUS:
-                return new Double(lhs + rhs);
+                return Double.valueOf(lhs + rhs);
 
             case MINUS:
-                return new Double(lhs - rhs);
+                return Double.valueOf(lhs - rhs);
 
             case STAR:
-                return new Double(lhs * rhs);
+                return Double.valueOf(lhs * rhs);
 
             case SLASH:
-                return new Double(lhs / rhs);
+                return Double.valueOf(lhs / rhs);
 
             case MOD:
-                return new Double(lhs % rhs);
+                return Double.valueOf(lhs % rhs);
 
             // can't shift floating-point values
             case LSHIFT:
@@ -554,41 +554,41 @@ public final class Primitive implements ParserConstants, java.io.Serializable
             // boolean
             case LT:
             case LTX:
-                return new Boolean(lhs < rhs);
+                return Boolean.valueOf(lhs < rhs);
 
             case GT:
             case GTX:
-                return new Boolean(lhs > rhs);
+                return Boolean.valueOf(lhs > rhs);
 
             case EQ:
-                return new Boolean(lhs == rhs);
+                return Boolean.valueOf(lhs == rhs);
 
             case LE:
             case LEX:
-                return new Boolean(lhs <= rhs);
+                return Boolean.valueOf(lhs <= rhs);
 
             case GE:
             case GEX:
-                return new Boolean(lhs >= rhs);
+                return Boolean.valueOf(lhs >= rhs);
 
             case NE:
-                return new Boolean(lhs != rhs);
+                return Boolean.valueOf(lhs != rhs);
 
             // arithmetic
             case PLUS:
-                return new Float(lhs + rhs);
+                return Float.valueOf(lhs + rhs);
 
             case MINUS:
-                return new Float(lhs - rhs);
+                return Float.valueOf(lhs - rhs);
 
             case STAR:
-                return new Float(lhs * rhs);
+                return Float.valueOf(lhs * rhs);
 
             case SLASH:
-                return new Float(lhs / rhs);
+                return Float.valueOf(lhs / rhs);
 
             case MOD:
-                return new Float(lhs % rhs);
+                return Float.valueOf(lhs % rhs);
 
             // can't shift floats
             case LSHIFT:
@@ -611,9 +611,9 @@ public final class Primitive implements ParserConstants, java.io.Serializable
     static Object promoteToInteger(Object wrapper )
     {
         if(wrapper instanceof Character)
-            return new Integer(((Character)wrapper).charValue());
+            return Integer.valueOf(((Character)wrapper).charValue());
         else if((wrapper instanceof Byte) || (wrapper instanceof Short))
-            return new Integer(((Number)wrapper).intValue());
+            return Integer.valueOf(((Number)wrapper).intValue());
 
         return wrapper;
     }
@@ -637,23 +637,23 @@ public final class Primitive implements ParserConstants, java.io.Serializable
             if((b = (lnum instanceof Double)) || (rnum instanceof Double))
             {
                 if(b)
-                    rhs = new Double(rnum.doubleValue());
+                    rhs = Double.valueOf(rnum.doubleValue());
                 else
-                    lhs = new Double(lnum.doubleValue());
+                    lhs = Double.valueOf(lnum.doubleValue());
             }
             else if((b = (lnum instanceof Float)) || (rnum instanceof Float))
             {
                 if(b)
-                    rhs = new Float(rnum.floatValue());
+                    rhs = Float.valueOf(rnum.floatValue());
                 else
-                    lhs = new Float(lnum.floatValue());
+                    lhs = Float.valueOf(lnum.floatValue());
             }
             else if((b = (lnum instanceof Long)) || (rnum instanceof Long))
             {
                 if(b)
-                    rhs = new Long(rnum.longValue());
+                    rhs = Long.valueOf(rnum.longValue());
                 else
-                    lhs = new Long(lnum.longValue());
+                    lhs = Long.valueOf(lnum.longValue());
             }
         }
 
@@ -819,7 +819,7 @@ public final class Primitive implements ParserConstants, java.io.Serializable
 
 		// Promote character to Number type for these purposes
 		if (value instanceof Character)
-			value = new Integer(((Character)value).charValue());
+			value = Integer.valueOf(((Character)value).charValue());
 
         if (value instanceof Number)
             return (Number)value;
@@ -1117,7 +1117,7 @@ public final class Primitive implements ParserConstants, java.io.Serializable
 
 		// first promote char to Number type to avoid duplicating code
 		if ( value instanceof Character )
-			value = new Integer(((Character)value).charValue());
+			value = Integer.valueOf(((Character)value).charValue());
 
 		if ( !(value instanceof Number) )
 			throw new InterpreterError("bad type in cast");
@@ -1125,19 +1125,19 @@ public final class Primitive implements ParserConstants, java.io.Serializable
 		Number number = (Number)value;
 
 		if (toType == Byte.TYPE)
-			return new Byte(number.byteValue());
+			return Byte.valueOf(number.byteValue());
 		if (toType == Short.TYPE)
-			return new Short(number.shortValue());
+			return Short.valueOf(number.shortValue());
 		if (toType == Character.TYPE)
-			return new Character((char)number.intValue());
+			return Character.valueOf((char)number.intValue());
 		if (toType == Integer.TYPE)
-			return new Integer(number.intValue());
+			return Integer.valueOf(number.intValue());
 		if (toType == Long.TYPE)
-			return new Long(number.longValue());
+			return Long.valueOf(number.longValue());
 		if (toType == Float.TYPE)
-			return new Float(number.floatValue());
+			return Float.valueOf(number.floatValue());
 		if (toType == Double.TYPE)
-			return new Double(number.doubleValue());
+			return Double.valueOf(number.doubleValue());
 
 		throw new InterpreterError("error in wrapper cast");
 	}
