@@ -269,12 +269,12 @@ public class This implements java.io.Serializable, Runnable
 
 		// a default hashCode()
 		if ( methodName.equals("hashCode" ) )
-			return new Integer(this.hashCode());
+			return Integer.valueOf(this.hashCode());
 
 		// a default equals() testing for equality with the This reference
 		if ( methodName.equals("equals" ) ) {
 			Object obj = args[0];
-			return new Boolean( this == obj );
+			return Boolean.valueOf( this == obj );
 		}
 
 		// Look for a default invoke() handler method in the namespace
